# inventory-rust

./: README.md  package-lock.json  package.json
src/: App.css  App.jsx  index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  lib.rs  main.rs  optional.rs
src-tauri/src/controllers/: mod.rs  notes.rs
