[package]
name = "inven-ruby"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"





[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
once_cell = "1.19"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync"] }
futures = "0.3"

